--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
+* {
+    font-family: sans-serif;
+}
+
 body {
     display: flex;
     height: 100vh;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .X, .O {
     font-size: 10rem;
+}
+.player-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .gameboard {
     display: grid;
